--- a/index.html
+++ b/index.html
@@ -1,150 +1,164 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width">
-  <title>Type 100 words Globish</title>
-  <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
+<!DOCTYPE html>
+<html>
 
-  <div class="container">
-    <div id="timer"></div>
-    <div id="cnt"></div>
-  </div>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Type 100 words Globish</title>
+    <link rel="stylesheet" href="css/styles.css">
+  </head>
 
-  <div class="typingContainer">
-    <p id="target"></p>
-    <p id="targetja"></p>
-    <p id="result"></p>
-    <p id="restart"></p>
-  </div>
+  <body>
 
-  <footer>
-    <p>Globish 1500単語からランダム100単語を早打ちするゲームです。クリックの替わりにエンターで進められます。ESCキーでやり直し可能。2分切れるか!?</p>
-    <p>DATA: <a href=https://github.com/taisukef/globish/>globishwords (CSV)</a></p>
-    <p>App: <a href=https://github.com/taisukef/TypingGame/>Type 100 words Globish</a> by <a href=https://fukuno.jig.jp/3124>@taisukef</a> - forked from "<a href=https://github.com/takerucam/TypingGame>TypingGame</a>"</p>
-    <p>Lib: <a href=https://github.com/taisukef/say.js/>音声読み上げ - say.js</a></p>
-  </footer>
+    <div class="container">
+      <div id="timer"></div>
+      <div id="cnt"></div>
+    </div>
 
-  <script type="module">
-    import { CSV } from "https://code4sabae.github.io/js/CSV.js";
-    import { say } from "https://taisukef.github.io/say.js/say.js";
+    <div class="typingContainer">
+      <p id="target"></p>
+      <p id="targetja"></p>
+      <p id="result"></p>
+      <p id="restart"></p>
+    </div>
 
-    window.onload = async () => {
-      const words = CSV.toJSON(await CSV.fetch("https://taisukef.github.io/globish/globishwords.csv"));
-      const wcnt = Math.min(words.length, document.location.hash.substring(1) || 100);
+    <footer>
+      <p>Globish 1500単語からランダム100単語を早打ちするゲームです。クリックの替わりにエンターで進められます。ESCキーでやり直し可能。2分切れるか!?</p>
+      <p>DATA: <a href=https://github.com/taisukef/globish />globishwords (CSV)</a></p>
+      <p>App: <a href=https://github.com/taisukef/TypingGame />Type 100 words Globish</a> by <a
+          href=https://fukuno.jig.jp/3124>@taisukef</a> - forked from "<a
+          href=https://github.com/takerucam/TypingGame>TypingGame</a>"</p>
+      <p>Lib: <a href=https://github.com/taisukef/say.js />音声読み上げ - say.js</a></p>
+    </footer>
 
-      for (;;) {
-        target.textContent = "Click to Start!"
-        cnt.textContent = `0/${wcnt}`;
-        const t = new Timer(timer);
-        await waitClickOrEnter(target);
-        shuffle(words);
-        t.start();
-        let escflg = false;
-        A: for (let i = 0; i < wcnt; i++) {
-          const w = words[i];
-          const word = w.en;
-          say(word, "en-US");
-          target.textContent = word;
-          targetja.textContent = w.ja;
-          for (let j = 0; j < word.length; j++) {
-            for (;;) {
-              const c = await waitKeyDown();
-              if (c == word[j]) {
-                break;
+    <script type="module">
+      import { CSV } from "https://code4sabae.github.io/js/CSV.js";
+      import { say } from "https://taisukef.github.io/say.js/say.js";
+
+      window.onload = async () => {
+        const words = await (await fetch("https://kamekyame.github.io/TypingGame/words.json")).json();
+        //CSV.toJSON(await CSV.fetch("https://taisukef.github.io/globish/globishwords.csv"));
+        //const words = CSV.toJSON(await CSV.fetch("https://taisukef.github.io/globish/globishwords.csv"));
+        const wcnt = Math.min(words.length, document.location.hash.substring(1) || 100);
+        console.log(wcnt);
+
+        for (; ;) {
+          target.textContent = "Click to Start!"
+          cnt.textContent = `0/${wcnt}`;
+          const t = new Timer(timer);
+          await waitClickOrEnter(target);
+          shuffle(words);
+          console.log(words);
+          t.start();
+          let escflg = false;
+          A: for (let i = 0; i < wcnt; i++) {
+            const word = words[i];
+            //console.log(w);
+            //const word = w.en;
+            say(word, "en-US");
+            target.textContent = word;
+            //targetja.textContent = w.ja;
+            for (let j = 0; j < word.length; j++) {
+              for (; ;) {
+                const c = await waitKeyDown();
+                if (c == word[j]) {
+                  break;
+                }
+                if (c == "Escape") {
+                  escflg = true;
+                  break A;
+                }
               }
-              if (c == "Escape") {
-                escflg = true;
-                break A;
-              }
+              target.textContent = '_'.repeat(j + 1) + word.substring(j + 1);
             }
-            target.textContent = '_'.repeat(j + 1) + word.substring(j + 1);
+            targetja.textContent = "";
+            cnt.textContent = `${i + 1}/${wcnt}`;
           }
-          targetja.textContent = "";
-          cnt.textContent = `${i + 1}/${wcnt}`;
+          t.stop();
+          result.textContent = escflg ? "" : "Congratulations!!";
+          restart.textContent = "もう一度挑戦する";
+          await waitClickOrEnter(restart);
+          result.textContent = restart.textContent = target.textContent = targetja.textContent = "";
         }
-        t.stop();
-        result.textContent = escflg ? "" : "Congratulations!!";
-        restart.textContent = "もう一度挑戦する";
-        await waitClickOrEnter(restart);
-        result.textContent = restart.textContent = target.textContent = targetja.textContent = "";
-      }
-    };
+      };
 
-    // util
-    const waitClick = (comp) => {
-      return new Promise((resolve) => {
-        comp.classList.add("cursor");
-        comp.onclick = () => {
-          comp.onclick = null;
-          comp.classList.remove("cursor");
-          resolve();
-        }
-      })
-    };
-    const waitClickOrEnter = (comp) => {
-      return new Promise((resolve) => {
-        comp.classList.add("cursor");
-        document.onkeydown = (e) => {
-          if (e.key == "Enter") {
-            document.onkeydown = null;
+      // util
+      const waitClick = (comp) => {
+        return new Promise((resolve) => {
+          comp.classList.add("cursor");
+          comp.onclick = () => {
+            comp.onclick = null;
+            comp.classList.remove("cursor");
             resolve();
           }
-        };
-        comp.onclick = () => {
-          comp.onclick = null;
-          comp.classList.remove("cursor");
-          resolve();
-        }
-      })
-    };
-    const waitKeyDown = () => {
-      return new Promise(resolve => {
+        })
+      };
+      const waitClickOrEnter = (comp) => {
+        return new Promise((resolve) => {
+          comp.classList.add("cursor");
           document.onkeydown = (e) => {
+            if (e.key == "Enter") {
               document.onkeydown = null;
-              resolve(e.key);
+              resolve();
+            }
+          };
+          comp.onclick = () => {
+            comp.onclick = null;
+            comp.classList.remove("cursor");
+            resolve();
           }
-      });
-    };
-    const rnd = (n) => {
-      return Math.floor(Math.random() * n);
-    };
-    const shuffle = (array) => {
-      const len = array.length;
-      for (let i = 0; i < len; i++) {
-        const n = rnd(len);
-        const tmp = array[i];
-        array[i] = array[n];
-        array[n] = tmp;
-      }
-    };
-
-    class Timer {
-      constructor(div) {
-        this.div = div;
-        this.div.textContent = "00:00:000";
-      }
-      start() {
-        if (this.tid) {
-          this.stop();
+        })
+      };
+      const waitKeyDown = () => {
+        return new Promise(resolve => {
+          document.onkeydown = (e) => {
+            document.onkeydown = null;
+            resolve(e.key);
+          }
+        });
+      };
+      const rnd = (n) => {
+        return Math.floor(Math.random() * n);
+      };
+      const shuffle = (array) => {
+        const len = array.length;
+        for (let i = 0; i < len; i++) {
+          const n = rnd(len);
+          const tmp = array[i];
+          array[i] = array[n];
+          array[n] = tmp;
         }
-        this.tid = null;
-        this.startTime = new Date().getTime();
-        this.show();
-        this.tid = setInterval(() => {
+      };
+
+      class Timer {
+        constructor(div) {
+          this.div = div;
+          this.div.textContent = "00:00:000";
+        }
+        start() {
+          if (this.tid) {
+            this.stop();
+          }
+          this.tid = null;
+          this.startTime = new Date().getTime();
           this.show();
-        }, 10);
+          this.tid = setInterval(() => {
+            this.show();
+          }, 10);
+        }
+        show() {
+          const d = new Date(Date.now() - this.startTime);
+          const m = d.getMinutes().toString().padStart(2, '0');
+          const s = d.getSeconds().toString().padStart(2, '0');
+          const ms = d.getMilliseconds().toString().padStart(3, '0');
+          this.div.textContent = `${m}:${s}:${ms}`;
+        }
+        stop() {
+          clearInterval(this.tid);
+          this.tid = null;
+        }
       }
-      show() {
-        const d = new Date(Date.now() - this.startTime);
-        const m = d.getMinutes().toString().padStart(2, '0');
-        const s = d.getSeconds().toString().padStart(2, '0');
-        const ms = d.getMilliseconds().toString().padStart(3, '0');
-        this.div.textContent = `${m}:${s}:${ms}`;
-      }
-      stop() {
-        clearInterval(this.tid);
-        this.tid = null;
-      }
-    }
-  </script>
-</body>
+    </script>
+  </body>
+
 </html>
