--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
 
     <footer>
       <p>Globish 1500単語からランダム100単語を早打ちするゲームです。クリックの替わりにエンターで進められます。ESCキーでやり直し可能。2分切れるか!?</p>
-      <p>DATA: <a href=https://github.com/taisukef/globish />globishwords (CSV)</a></p>
-      <p>App: <a href=https://github.com/taisukef/TypingGame />Type 100 words Globish</a> by <a
-          href=https://fukuno.jig.jp/3124>@taisukef</a> - forked from "<a
-          href=https://github.com/takerucam/TypingGame>TypingGame</a>"</p>
+      <p>DATA: <a href=https://qiita.com/Ted-HM/items/7dde25dcffae4cdc7923 />プログラミングでよく使う英単語のまとめ by Qiita</a></p>
+      <p>App: <a href=https://github.com/kamekyame/TypingGame />Type 100 programing words</a> by @kamekyame - forked
+        from "<a href=https://github.com/taisukef/TypingGame>TypingGame</a>"</p>
       <p>Lib: <a href=https://github.com/taisukef/say.js />音声読み上げ - say.js</a></p>
     </footer>
 
