--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <footer>
-      <p>Globish 1500単語からランダム100単語を早打ちするゲームです。クリックの替わりにエンターで進められます。ESCキーでやり直し可能。2分切れるか!?</p>
+      <p>「プログラミングでよく使う英単語のまとめ」からランダム100単語を早打ちするゲームです。クリックの替わりにエンターで進められます。ESCキーでやり直し可能。2分切れるか!?</p>
       <p>DATA: <a href=https://github.com/taisukef/globish />globishwords (CSV)</a></p>
       <p>App: <a href=https://github.com/taisukef/TypingGame />Type 100 words Globish</a> by <a
           href=https://fukuno.jig.jp/3124>@taisukef</a> - forked from "<a
